JSW Devsb/src/objects/Visit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Sub_Type__c</fullName>
        <label>Activity Sub Type</label>
        <picklist>
            <controllingField>Activity_Type__c</controllingField>
            <picklistValues>
                <fullName>Introductory visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical aspects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint redressal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-conversion/ customer retention</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-sale</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Any_image_to_be_captured__c</fullName>
        <label>Any image to be captured</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <label>Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brief_Details_Of_Call__c</fullName>
        <label>Brief Details Of Call</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Partner</label>
        <referenceTo>Business_Partner__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carpet_Area_Sqft1__c</fullName>
        <label>Carpet Area (Sqft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carpet_Area_Sqft__c</fullName>
        <formula>Account__r.Carpet_Area_Sqft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carpet Area (Sqft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_In_Time__c</fullName>
        <formula>IF(Check_In__c != null, DATETIMEVALUE(Check_In__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_In__c</fullName>
        <label>Check In</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Out_Time__c</fullName>
        <formula>IF(Check_Out__c != null, DATETIMEVALUE(Check_Out__c)-(1/4.8)-(30/1440), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Out Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_Out__c</fullName>
        <label>Check Out</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkouttime__c</fullName>
        <formula>Check_Out_Time__c - 0.02073</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checkouttime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Competitor_Brands__c</fullName>
        <label>Competitor Brands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_of_Godown__c</fullName>
        <label>Condition of Godown</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not as per ISP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Construction_Stage__c</fullName>
        <label>Construction Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nearing Completion</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Type</label>
        <referenceTo>Customer_Types__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Damage_Stock_Ageing_for_CC__c</fullName>
        <label>Damage Stock Ageing for CC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Damage_Stock_Ageing_for_CHD__c</fullName>
        <label>Damage Stock Ageing for CHD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Damage_Stock_Ageing_for_OPC__c</fullName>
        <label>Damage Stock Ageing for OPC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Damage_Stock_Ageing_for_PSC__c</fullName>
        <label>Damage Stock Ageing for PSC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Damaged_Cement_MT_for_CC__c</fullName>
        <label>Damaged Cement (MT) for CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Cement_MT_for_CHD__c</fullName>
        <label>Damaged Cement (MT) for CHD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Cement_MT_for_OPC__c</fullName>
        <label>Damaged Cement (MT) for OPC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Cement_MT_for_PSC__c</fullName>
        <label>Damaged Cement (MT) for PSC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Activity__c</fullName>
        <label>Date of Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Inspection__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date of Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Day Plan</label>
        <referenceTo>Day_Plan__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Customer_SAP_Code__c</fullName>
        <label>Dealer / Customer SAP Code</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depot_Visit__c</fullName>
        <formula>IF( OR(Account__r.RecordType.Name = &apos;Depot&apos;) , true, false)</formula>
        <label>Depot Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Depot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depot</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Depot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits (Depot)</relationshipLabel>
        <relationshipName>Visits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <formula>DISTANCE( Location__c ,  Visited_Location__c , &apos;mi&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_I_F_O_movement__c</fullName>
        <label>F.I-F.O movement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_Visit_Type__c</fullName>
        <label>General Visit Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Godown_Stock_as_on_Month_end_MT_for_CC__c</fullName>
        <label>Godown Stock as on Month end (MT) for CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Godown_Stock_as_on_Month_end_MT_for_OPC__c</fullName>
        <label>Godown Stock on Month end (MT) for OPC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Godown_Stock_as_on_Month_end_MT_for_PSC__c</fullName>
        <label>Godown Stock as on Month end (MT) for PS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Godown_Stock_on_Month_end_MT_for_CHD__c</fullName>
        <label>Godown Stock as Month end (MT) for CHD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Godown_stock_MT_for_CHD__c</fullName>
        <label>Godown stock (MT) for CHD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Godown_stock_MT_for_OPC__c</fullName>
        <label>Godown stock (MT) for OPC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Godown_stock_MT_for_PSC__c</fullName>
        <label>Godown stock (MT) for PSC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Godown_stock_MT_for_composite_Cement__c</fullName>
        <label>Godown stock (MT) for composite Cement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Good_Stock_Ageing_for_CC__c</fullName>
        <label>Good Stock Ageing for CC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Good_Stock_Ageing_for_CHD__c</fullName>
        <label>Good Stock Ageing for CHD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Good_Stock_Ageing_for_OPC__c</fullName>
        <label>Good Stock Ageing for OPC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Good_Stock_Ageing_for_PSC__c</fullName>
        <label>Good Stock Ageing for PSC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ideal_Storage_Capacity_MT1__c</fullName>
        <label>Ideal Storage Capacity (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ideal_Storage_Capacity_MT__c</fullName>
        <formula>Account__r.Ideal_Storage_Capacity_MT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ideal Storage Capacity (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Potential_Lead_Share_with_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>If Potential Lead Share with Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Influencer_Type1__c</fullName>
        <label>Influencer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influencer_Type__c</fullName>
        <formula>TEXT(Influencer__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Influencer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influencer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Influencer</label>
        <referenceTo>Influencer__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invalid__c</fullName>
        <formula>IF( AND(DATEVALUE( Start__c ) !=  Planned_Date__c)  , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issues_faced_service_requests__c</fullName>
        <label>Issues faced/ service requests</label>
        <picklist>
            <picklistValues>
                <fullName>Branding Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Techinical isues to be resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>meets to be conducted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Followup for appointing non JSW dealers</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JSW_Bag_Visibility__c</fullName>
        <label>JSW Bag Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JSW_Shop_Board_Condition__c</fullName>
        <label>JSW Shop Board Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Absent</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JSW_share_of_wallet__c</fullName>
        <label>JSW share of wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KYC_Form_Filled__c</fullName>
        <formula>Lead__r.KYC_Form_Filled__c</formula>
        <label>KYC Form Filled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KYC_form_filled1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KYC_form_filled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LATF_Name__c</fullName>
        <label>LATF Name</label>
        <picklist>
            <picklistValues>
                <fullName>Y Shrikanth Reddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J Ramanjaeyulu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K Raghvendra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K Nagarjuna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishnu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akhil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shiras M.V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tousif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hemanth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chetan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R Mouleswaran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V. Charles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R Vibhusan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajesh Kumar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Muthukumar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manoj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. Vishal</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Status1__c</fullName>
        <label>Lead Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <formula>TEXT( Lead__r.Status )</formula>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type1__c</fullName>
        <label>Lead Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <formula>TEXT( Lead__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Location_of_TSO__c</fullName>
        <label>Location of TSO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Check_In__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Manual Check In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manual_Check_Out__c</fullName>
        <label>Manual Check Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Market_Information_Count__c</fullName>
        <label>Market Information Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Information_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Market Information ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Information</label>
        <referenceTo>Market_Information__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Month Plan</label>
        <referenceTo>Month_Plan__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_Year__c</fullName>
        <label>Month/Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Account__r.Name + Lead__r.FirstName + Lead__r.MiddleName + Lead__r.LastName +  TEXT(Event__r.Type_of_Meet__c) + Area__r.Name +  Business_Partner__r.Name +  Project_Site__r.Name +  Influencer__r.Name +  Territory__r.Name  + Depot__r.Name +
IF( AND(  OR( Account__c == null, Account__c == &apos;&apos;)  ,
          OR( Lead__c == null, Lead__c == &apos;&apos;)  ,
          OR( Event__c == null, Event__c == &apos;&apos;)  ,
          OR( Area__c == null, Area__c == &apos;&apos;)  ,
          OR( Business_Partner__c == null, Business_Partner__c == &apos;&apos;)  ,
          OR( Project_Site__c == null, Project_Site__c == &apos;&apos;)  ,
          OR( Influencer__c == null, Influencer__c == &apos;&apos;) ,
          OR( Territory__c == null, Territory__c == &apos;&apos;) ),
               General_Visit_Type__c , &apos;&apos;)</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Concerned_Marketing_Officer__c</fullName>
        <label>Name of Concerned Marketing Officer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Customer_Influencer__c</fullName>
        <label>Name of Customer/ Influencer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Dealer_Retailer__c</fullName>
        <label>Name of Dealer/ Retailer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_TS_person__c</fullName>
        <label>Name of TS person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_concerned_SO1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of concerned SO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_concerned_SO__c</fullName>
        <formula>Influencer__r.Name_of_concerned_SO__r.FirstName + &apos; &apos; + Influencer__r.Name_of_concerned_SO__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of concerned SO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offline_App_CheckIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline App CheckIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offline_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PJP_Month_Plan1__c</fullName>
        <label>PJP Month Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJP_Status1__c</fullName>
        <label>PJP Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PJP_Status__c</fullName>
        <formula>IF(ISPICKVAL(Day_Plan__r.Month_Plan__r.Status__c, &apos;New Request&apos;),&apos;New Request&apos;,&apos;&apos;)+
IF(ISPICKVAL(Day_Plan__r.Month_Plan__r.Status__c, &apos;Pending&apos;),&apos;Pending&apos;,&apos;&apos;)+
IF(ISPICKVAL(Day_Plan__r.Month_Plan__r.Status__c, &apos;Submitted&apos;),&apos;Submitted&apos;,&apos;&apos;)+
IF(ISPICKVAL(Day_Plan__r.Month_Plan__r.Status__c, &apos;Approved&apos;),&apos;Approved&apos;,&apos;&apos;)+
IF(ISPICKVAL(Day_Plan__r.Month_Plan__r.Status__c, &apos;Rejected&apos;),&apos;Rejected &apos;,&apos;&apos;)</formula>
        <label>PJP Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POP_material_comments__c</fullName>
        <label>POP material – comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Past__c</fullName>
        <formula>IF( Planned_Date__c &lt;  TODAY() , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Collected_by_SO__c</fullName>
        <label>Payment collected in current visit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Payment_Amount_Committed_Date__c</fullName>
        <label>Pending Payment Committed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Place_Address__c</fullName>
        <label>Place/Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Co_ordinates__c</fullName>
        <formula>IF( AND(OR( Account__c != null, Depot__c != null, Business_Partner__c != null),OR( NOT(ISNULL(Account__r.Location__c)), NOT(ISNULL(Business_Partner__r.Location__c)), NOT(ISNULL(Depot__r.Location__c)))) 
, true, false)</formula>
        <label>Planned Co-ordinates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Date__c</fullName>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Inspection__c</fullName>
        <label>Previous Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Reading_Count__c</fullName>
        <label>Price Reading Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_WSP_RS__c</fullName>
        <label>Price - WSP, RS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_bill_price__c</fullName>
        <label>Price – bill price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite cement</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Site</label>
        <referenceTo>Project_Site__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Visit__c</fullName>
        <label>Purpose of Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Account__r.BillingCity +  Area__r.Billing_City__c +  Business_Partner__r.City__c +  Influencer__r.City__c +  Customer_Type__r.City__c + Event__r.City__c +  Project_Site__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_with_JSW_ELP_program1__c</fullName>
        <label>Registered with JSW ELP program?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_with_JSW_ELP_program__c</fullName>
        <formula>TEXT( Influencer__r.Registered_with_JSW_ELP_program__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registered with JSW ELP program?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Details of the Visit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <label>Responsibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_No__c</fullName>
        <label>S.No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seggregation_of_good_damaged_cement__c</fullName>
        <label>Seggregation of good &amp; damaged cement</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Name1__c</fullName>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <formula>Project_Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Type1__c</fullName>
        <label>Site Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <formula>TEXT(Project_Site__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_demo_type__c</fullName>
        <label>Site demo type</label>
        <picklist>
            <picklistValues>
                <fullName>Cube casting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slab Supervision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cover block Demo</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stacking_pattern_As_per_ISP__c</fullName>
        <label>Stacking pattern (As per ISP?)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>